--- a/demo/src/main/resources/templates/catalogo.html
+++ b/demo/src/main/resources/templates/catalogo.html
@@ -5,6 +5,8 @@
     <title>Catálogo - Bibliosfera</title>
     <!-- Si este archivo fuera accedido directamente, necesitaría sus propios CSS aquí.
          Como es un fragmento inyectado, usa los CSS del index.html principal. -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </head>
 <body>
 
