--- a/demo/src/main/resources/templates/nosotros.html
+++ b/demo/src/main/resources/templates/nosotros.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Nosotros - Bibliosfera</title>
     <!-- Los CSS globales se cargarán desde index.html -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
 
