--- a/demo/src/main/resources/templates/fragments/footer.html
+++ b/demo/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,5 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
 <footer class="bg-primary-subtle text-primary opacity-75 py-4 mt-5" th:fragment="footer">
     <div class="container">
         <div class="row text-center">
