--- a/demo/src/main/resources/templates/fragments/navbar.html
+++ b/demo/src/main/resources/templates/fragments/navbar.html
@@ -1,7 +1,10 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary-subtle" th:fragment="navbar">
     <div class="container-fluid">
         <a class="navbar-brand text-primary opacity-75" href="/inicio">
-            <img src="/img/lib-logo1.jpg" width="30" height="30" alt="Logo"> Librería Bibliosfera
+            <img src="img/lib-logo1.jpg" width="30" height="30" alt="Logo"> Librería Bibliosfera
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
